# udacity-robotics-software-engineer

./: README.md
Arm2dof/simple_arm/: CMakeLists.txt
Arm2dof/simple_arm/launch/: robot_spawn.launch
Arm2dof/simple_arm/src/: arm_mover.cpp  look_away.cpp  simple_mover.cpp
Arm2dof/simple_arm/srv/: GoToPosition.srv
Arm2dof/simple_arm/urdf/: simple_arm.gazebo.xacro
Localization2D/: EKF_lab.rviz  RvizLaunch.launch
Localization2D/main/: CMakeLists.txt  package.xml
Localization2D/main/launch/: main.launch
Project1/script/: welcome_message.cpp
Project1/world/: warehouseWorld
Project1: Build my world/: CMakeLists.txt
Project2/ball_chaser/: CMakeLists.txt
Project3/: localization.rviz
Project3/my_robot/: CMakeLists.txt
Project4/: localization.rviz
Project5/add_markers/: CMakeLists.txt  package.xml
Project5/map/: map.pgm  map.yaml
Project5/pick_objects/: CMakeLists.txt  package.xml
Project5/rvizConfig/: home_service_robot.rviz
Project5/scripts/: add_markers.sh  home_service.sh  pick_objects.sh  test_navigation.sh  test_slam.sh
Project5/turtlebot_interactions/: README.md
Project5/turtlebot_interactions/turtlebot_dashboard/: CHANGELOG.rst  CMakeLists.txt  package.xml
Project5/turtlebot_interactions/turtlebot_dashboard/launch/: turtlebot_dashboard.launch
Project5/turtlebot_interactions/turtlebot_dashboard/launch/create/: dashboard.launch.xml
Project5/turtlebot_interactions/turtlebot_dashboard/launch/kobuki/: dashboard.launch.xml
Project5/turtlebot_interactions/turtlebot_dashboard/launch/roomba/: dashboard.launch.xml
(+34 files in other folders)
