<?xml version="1.0"?>
<package>
  <name>turtlebot_dashboard</name>
  <version>2.3.1</version>
  <description>Launchers for the base-specific dashboards</description>
  <maintainer email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/turtlebot_dashboard</url>
  <url type="repository">https://github.com/turtlebot/turtlebot_interactions</url>
  <url type="bugtracker">https://github.com/turtlebot/turtlebot_interactions/issues</url>
  <author>Marcus Liebhardt</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>create_dashboard</run_depend>
  <run_depend>kobuki_dashboard</run_depend>
</package>
